Waveforms in vse vanish when a strip has a volume fcurve with no animation points. #69564

Closed
opened 2019-09-06 00:33:29 +02:00 by hudson barkley · 9 comments

Blender Version
Broken: 2.80, 2.81

Short description of error
When an fcurve is created on a vse strip in python, but no points are added to the curve, the waveform vanishes (as if it is at volume 0), and it will not display again until the fcurve is removed, or a point is added.
Note: the audio will still play back fine, so this seems to be exclusively limited to waveform display.

Exact steps for others to reproduce the error

  1. Enable waveform display (View menu > Waveform Displaying > Waveforms On)
  2. Load 2 audio files into a fresh vse
  3. Add an animation point to audio file 1 (to ensure the scene has animation data)
  4. Select only audio file 2
  5. Paste the following into a console:
bpy.context.scene.animation_data.action.fcurves.new(data_path=bpy.context.scene.sequence_editor.active_strip.path_from_id('volume'))
  1. Move the cursor to cause a refresh.
**Blender Version** Broken: 2.80, 2.81 **Short description of error** When an fcurve is created on a vse strip in python, but no points are added to the curve, the waveform vanishes (as if it is at volume 0), and it will not display again until the fcurve is removed, or a point is added. Note: the audio will still play back fine, so this seems to be exclusively limited to waveform display. **Exact steps for others to reproduce the error** 1. Enable waveform display (View menu > Waveform Displaying > Waveforms On) 2. Load 2 audio files into a fresh vse 3. Add an animation point to audio file 1 (to ensure the scene has animation data) 4. Select only audio file 2 5. Paste the following into a console: ``` bpy.context.scene.animation_data.action.fcurves.new(data_path=bpy.context.scene.sequence_editor.active_strip.path_from_id('volume')) ``` 6. Move the cursor to cause a refresh.
Author

Added subscriber: @snuq

Added subscriber: @snuq

Added subscriber: @BlenderFrenzy

Added subscriber: @BlenderFrenzy

This same thing happens when adjusting the Hold Cut start/end frames in strip's Time properties.

Reproduce:

  1. Select Audio Strip
  2. Check Display Waveform (Properties Panel > Adjust > Sound > Display Waveform)
  3. Adjust Start/End frames of the Hold Cut (Properties Panel > Time > Hold Offset Start/End
  • Usually only happens when adjusting the End frame for me
  • The first couple adjustments don't reproduce the error. Must adjust several times.

Workaround:

In order to refresh the audio to see the waveforms again, follow these steps:

  1. Save your file
  2. Go to File > Open Recent > The file you just saved
This same thing happens when adjusting the Hold Cut start/end frames in strip's Time properties. Reproduce: 1. Select Audio Strip 2. Check Display Waveform (Properties Panel > Adjust > Sound > Display Waveform) 3. Adjust Start/End frames of the Hold Cut (Properties Panel > Time > Hold Offset Start/End * Usually only happens when adjusting the End frame for me * The first couple adjustments don't reproduce the error. Must adjust several times. Workaround: In order to refresh the audio to see the waveforms again, follow these steps: 1. Save your file 2. Go to File > Open Recent > The file you just saved

Added subscriber: @iss

Added subscriber: @iss

@BlenderFrenzy This is completely different bug.

There is waveform redraw forced somewhere deep in depsgraph probably.
Can not make fix right away unfortunately.

@BlenderFrenzy This is completely different bug. There is waveform redraw forced somewhere deep in depsgraph probably. Can not make fix right away unfortunately.

@BlenderFrenzy I will post this bug so I won't forget

@BlenderFrenzy I will post this bug so I won't forget

@iss Thank you!

@iss Thank you!

This issue was referenced by 2e55171e71

This issue was referenced by 2e55171e719def893cdb363d236b40119d33a010

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Richard Antalik self-assigned this 2019-09-22 22:42:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69564
No description provided.